--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="/dist/style.css" rel="stylesheet" />
     <title>Affinitas</title>
 </head>
 
 <body>
-
     <div id="app"></div>
     <script type="text/javascript" src="/dist/bundle.js"></script>
 </body>
